# Mailwright-Agentic_Marketing_Email_Platform

./: .env.example  .gitignore  DOCUMENTATION.md  MODULE_REFERENCE.md  ONBOARDING.md  README.md  alembic.ini  context_engineering.md  pyproject.toml  requirements.txt
.cursor/rules/: primary-context.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 26fb755ba38b_add_raw_html_to_rag_templates.py  b42c672b7a7e_create_new_rag_corpus_table.py  c1e1c3e07a5e_create_template_versions_table.py
archive/: cuda-test.py
archive/legacy_code/: __init__.py  content.py  generator.py  schema.py  store.py  templates_api.py
archive/templates/: content.py  store.py
ingest/: travel-agency-link-in-bio.json
mailwright/: __init__.py  config.py  logging_config.py  main.py  templates_api.py
output/: abandoned-cart.html  diagnose_2_processed.html  diagnose_3_populated.html  halloween-movie-premier.html  halloween-movie-premier_media_placeholders.html  rag_test_output.html  restaurant-link-in-bio.html  sample.html  test-movie-premier-replaced.html  test-movie-premier.html  we-are-so-glad-you-are-here.html  we-are-so-glad-you-are-here_media_placeholders.html  wedding-planner-page.html  wimbledon-sale-page.html  your-monthly-crypto-roundup.html  your-monthly-crypto-roundup_media_placeholders.html
scripts/: clear_rag_db.py  diagnose_schema.py  extract_html.py  ingest_rag_corpus.py  manual_test_ingestion.py  replace_media.py  test_openai_access.py
templates/: 12-days-of-christmas-streaming-page.json  12-days-of-christmas-streaming.json  12-days-of-movies-promotion-this-christmas.json  12-days-of-movies-promotion.json  12-months-of-data.json  15-off-valentines-day-bouquets.json  2020-in-review.json  24-hours-only.json  5-sustainable-goals-to-transform-the-world.json  8-march.json  a-day-for-all-pets.json  a-different-valentines-day.json  a-gift-daddy-will-love.json  a-gift-for-mom-a-gift-for-you.json  a-gift-from-the-heart.json  a-month-full-of-juicy-burgers.json  a-summer-in-the-garden.json  a-treat-from-6-feet-under.json  a-very-special-may-day-offer.json  a-world-with-kindness.json  a-year-in-review-2021.json  a-year-in-review-2022.json  a-year-in-review-fitness-email.json  a-year-in-review-fitness-landing.json  a-year-in-review.json  a-year-of-music-in-review.json  abandoned-cart-e-commerce.json  abandoned-cart-new.json  abandoned-cart.json  abandoned-cartbrowse.json  about-me.json  abstract-link-in-bio-page.json  account-activation.json  act-now-or-swim-later.json  adapting-to-the-new-normal.json  adopt-a-cat-this-june.json  adopt-dont-shop.json  against-guns.json  agency-template.json  agency.json  (+1558 more)
tests/: Xyra API - TemplateGen Tests.postman_collection.json  conftest.py
ui/: app.py  requirements.txt
xyra/: __init__.py  config.py  logging_config.py  main.py  templates_api.py
(+70 files in other folders)
